# esphub

./: .gitignore  Cargo.toml  README.md  build.rs
ap/: .gitignore  Cargo.toml  Makefile  build.rs
ap/.zed/: settings.json
ap/src/: encrypting.rs  gateway.rs  lib.rs  main.rs  networking.rs  web.rs
ap/src/pages/: index.css  index.js
esphub-rx/: Cargo.toml  Makefile
esphub-rx/src/: main.rs
shared/: Cargo.toml
shared/.zed/: settings.json
shared/src/: enums.rs  lib.rs  structs.rs
src/: gateway.rs  lib.rs  main.rs  routing.rs  util.rs  web.rs
src/pages/: index.css  index.html  index.js
sta/: Cargo.toml
sta/.zed/: settings.json
sta/src/: main.rs
