[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = {version = "1.0.228", default-features = false, features=["derive"]}
postcard = {version = "1.1.3", default-features = false}
esp-hal = { version = "~1.1.0", features = ["esp32c3", "unstable"] }
esp-println = { version = "0.17.0", features = ["defmt-espflash", "esp32c3"] }
heapless = "0.9.3"
